Merged Upgrader11to12 and Upgrader12to13
Closes #5572